--- a/Desafios/projeto-cordel/index.html
+++ b/Desafios/projeto-cordel/index.html
@@ -14,8 +14,8 @@
     </header>
 
     <main class="principal">
-        <section class="sessao" id="s01">
-            <p>
+        <section class="sessao-normal">
+            <p class="paragrafo-normal">
                 Estou ficando cansado <br>
                 Da tal tecnologia <br>
                 Só se fala por e-mail <br>
@@ -26,8 +26,8 @@
             </p>
         </section>
 
-        <section class="sessao" id="s02">
-            <p>
+        <section class="sessao-imagem" id="sessao02">
+            <p class="paragrafo-imagem" id="paragrafo02">
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
                 "Você" só tem duas letras <br>
@@ -38,16 +38,17 @@
             </p>
         </section>
 
-        <section class="sessao" id="s03">
-            <p>
+        <section class="sessao-normal">
+            <p class="paragrafo-normal">
                 Arroba agora não pesa <br>
                 É parte de um endereço <br>
                 Ponto final nem se usa <br>
                 Ou vai até no começo <br>
                 Agora é .com <br>
                 Se o saite é muito bom <br>
-                Ele vale um alto preço. <br>
-                <br>
+                Ele vale um alto preço. 
+            </p>
+            <p class="paragrafo-normal">
                 Pra piorar a liguagem <br>
                 O emoticom é um risco <br>
                 Tem símbolo para tudo <br>
@@ -58,8 +59,8 @@
             </p>
         </section>
 
-        <section class="sessao" id="s04">
-            <p>
+        <section class="sessao-imagem" id="sessao04">
+            <p class="paragrafo-imagem" id="paragrafo04">
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
                 Mandava no mês de Junho <br>
@@ -70,16 +71,18 @@
             </p>
         </section>
 
-        <section class="sessao" id="s05">
-            <p>
+        <section class="sessao-normal">
+            <p class="paragrafo-normal">
                 Agora, escrevo e envio <br>
                 Chegando na mesma hora <br>
                 Mas quando vou prosear <br>
                 A pessoa foi embora <br>
                 Abriu outro aplicativo <br>
                 O mundo ficou cativo <br>
-                Da tecnologia do agora. <br>
-                <br>
+                Da tecnologia do agora. 
+            </p>
+
+            <p class="paragrafo-normal">
                 Felizmente, pra orar <br>
                 Não precisa de internet <br>
                 Deus escuta todo mundo <br>
