--- a/Exercicios/ex023/tabela001.html
+++ b/Exercicios/ex023/tabela001.html
@@ -11,11 +11,14 @@
         }
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /* Alinhamento Horizontal */
+            vertical-align: top; /* Alinhamento Vertical */
         }
     </style>
 </head>
