--- a/Desafios/projeto-social/paginas/github.html
+++ b/Desafios/projeto-social/paginas/github.html
@@ -5,39 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            text-decoration: none;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        ::-webkit-scrollbar {
-            width: 0px;
-            height: 0px;
-        }
-
-        img {
-            margin-top: 30px;
-            width: 105vw;
-            height: 130vh;
-            background: black no-repeat top center;
-            background-size: cover;
-        }
-
-        a {
-            display: block;
-            background-color: rgb(119, 24, 24);
-            color: white;
-            padding: 20px;
-            text-align: center;
-            font-weight: bolder;
-        }
-    </style>
+    <link rel="stylesheet" href="/estilos/social.css">
 </head>
 <body>
-    <img src="/imagens/tela-github.jpg" alt="GitHub">
+    <img src="../imagens/tela-github.jpg" alt="GitHub">
     <a href="https://github.com/leonardokuster" target="_blank">ACESSE</a>
 </body>
 </html>
