--- a/Exercicios/ex025/formulario003.html
+++ b/Exercicios/ex025/formulario003.html
@@ -29,6 +29,18 @@
             <label for="ihora">Horário da prova:</label>
             <input type="time" name="hora" id="ihora" value="12:00">
         </p>
+        <!--Estudar mais sobre RegEX (expressões regulares)-->
+        <fieldset>
+            <legend>Dados pessoais</legend>
+            <p>
+                <label for="itelefone">Telefone:</label>
+                <input type="tel" name="telefone" id="itelefone" placeholder="(xx)xxxxx-xxxx" required autocomplete="tel" pattern="^\(\d{2}\)\d{4,5}-\d{4}$">
+            </p>
+            <p>
+                <label for="iemail">Email:</label>
+                <input type="email" name="email" id="iemail" required autocomplete="email">
+            </p>
+        </fieldset>
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
